# spice

./: .gitignore  Cargo.toml  README.md
examples/: mock_harness.rs
examples/recipe_agent/: agent.rs  main.rs  prompt.md
examples/recipe_agent/tools/: get_nutrition.md  search_recipes.md
examples/weather_agent/: README.md  agent.rs  main.rs
src/: agent.rs  assertion.rs  error.rs  lib.rs  mock.rs  multi_turn.rs  rbac.rs  report.rs  runner.rs  test_case.rs  toolkit.rs  trace.rs
