[package]
name = "spice-framework"
version = "0.1.0"
edition = "2021"
description = "A Rust test framework for nondeterministic LLM agents"
license = "MIT"

[dependencies]
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
dotenvy = "0.15.7"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }

[[example]]
name = "mock_harness"
path = "examples/mock_harness.rs"

[[example]]
name = "weather_agent"
path = "examples/weather_agent/main.rs"

[[example]]
name = "recipe_agent"
path = "examples/recipe_agent/main.rs"
